Adding Home screen and Offer details screen

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:focusableInTouchMode="true" >
 
     <Button
         android:id="@+id/signin"
