--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,34 +1,18 @@
-<com.codefupanda.instamojo.layout.AnimationLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/animation_layout"
+    android:id="@+id/animation_layout_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".HomeActivity" >
 
-    <LinearLayout
-        android:id="@+id/animation_layout_sidebar"
-        android:layout_width="200dip"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        
-    </LinearLayout>
-    
-    <RelativeLayout 
-        android:id="@+id/animation_layout_content"
+    <ListView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:onClick="onClickContentButton">
+        android:layout_height="wrap_content" >
+    </ListView>
 
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
-    </RelativeLayout>
-
-</com.codefupanda.instamojo.layout.AnimationLayout>
+</RelativeLayout>
